[package]
name = "dxf2elmt"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
#panic = "abort" # Could cause crashes

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[dependencies]
dxf = "0.5.0"
simple-xml-builder = "1.1.0"
bspline = "1.1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
tempfile = "3.3.0"