[package]
name = "dxf2elmt"
version = "0.3.1"
edition = "2021"
author = "Antonio Aguilar"
readme = "README.md"
repository = "https://github.com/antonioaja/dxf2elmt"
license = "MIT"

[profile.release]
strip = true
lto = true
codegen-units = 1
# panic = "abort" # Could cause crashes

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[dependencies]
dxf = "0.5.0"
simple-xml-builder = "1.1.0"
bspline = "1.1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
tempfile = "3.3.0"
clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.58"
