[package]
name = "dxf2elmt"
version = "0.3.4"
edition = "2021"
description = "A CLI program to convert .dxf files into .elmt files"
authors = ["Antonio Aguilar <github: antonioaja>"]
readme = "README.md"
repository = "https://github.com/antonioaja/dxf2elmt"
license = "MIT"

[profile.release]
strip = true
lto = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
dxf = "0.5.0"
simple-xml-builder = "1.1.0"
bspline = "1.1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
tempfile = "3.3.0"
clap = { version = "3.2.22", features = ["derive"] }
anyhow = "1.0.58"
